Co-authored-by: mazenhorasgames <mazenhorasgames@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="css/normalizer.css" />
-    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="css/project.css" />
     <!-- font awesome lib -->
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- fonts -->
