--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="landing-text">
                     <h1>تعرف علي اهم انجازات مصر</h1>
                     <p>قامت مصر بعمل الكثير من الأنجازات في مختلف المجالات</p>
-                    <button href="">أبدا</button>
+                    <button class="landing-btn" href="">أبدا</button>
                 </div>
             </div>    
         </div>
